web/index.html: add #1 to "Interactive mockup" link text

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
         <h2>Finding Aids Manager (FAM)</h2>
 
         <ul>
-            <li><a href="fam/mockup-01/">Interactive mockup</a></li>
+            <li><a href="fam/mockup-01/">Interactive mockup #1</a></li>
         </ul>
     </div>
 
