web/index.html: add link to Laura's UX site

--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,12 @@
         <h1>Finding Aids development web</h1>
         <p class="lead">Web area for keeping Finding Aids tools, mockups, demos, designs, and miscellany.  For DLTS internal use only.</p>
 
+        <h2>Finding Aids Site(s) (FAS)</h2>
+
+        <ul>
+            <li><a href="/ux/findingaids/">UX (stage only, there is no dev instance)</a></li>
+        </ul>
+
         <h2>Finding Aids Manager (FAM)</h2>
 
         <ul>
