--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
 
         <ul>
             <li><a href="/ux/findingaids/">UX (stage only, there is no dev instance)</a></li>
+            <ul>
+                <li><a href="/ux/findingaids/polyportraits/">Guide to the Poly Archives Portrait Collection, 1866-2007</a></li>
+            </ul>
         </ul>
 
         <h2>Finding Aids Manager (FAM)</h2>
