--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,36 @@
         <ul>
             <li><a href="fam/mockup-01/">Interactive mockup #1</a></li>
         </ul>
+
+        <h2>Github repos</h2>
+
+        <ul>
+            <li>
+                <a href="https://github.com/nyudlts/fadesign_29-data-model">
+                    Data model for Finding Aids EAD
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/NYULibraries/dlts-finding-aids-ead-sample-set-1">
+                    EAD sample set #1
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/NYULibraries/dlts-finding-aids-ead-go-packages">
+                    Go packages for EAD
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/NYULibraries/dlts-finding-aids-json-generated-from-ead-sample-set-1">
+                    JSON files
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/NYULibraries/dlts-finding-aids-zek-generated-code">
+                    Zek files
+                </a>
+            </li>
+        </ul>
     </div>
 
 </div><!-- /.container -->
