--- a/web/index.html
+++ b/web/index.html
@@ -29,6 +29,7 @@
             <ul>
                 <li><a href="http://stageweb1.dlib.nyu.edu/ux/findingaids/datamodel_v5/">Finding Aids Data Model 5</a></li>
                 <li><a href="/ux/findingaids/polyportraits/">Guide to the Poly Archives Portrait Collection, 1866-2007</a></li>
+                <li><a href="https://stageweb1.dlib.nyu.edu/ux/findingaids/sampleset2/">Finding Aids Sample Set 2/</a></li>
             </ul>
         </ul>
 
