web/index.html: add FAM mockup #2

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
 
         <ul>
             <li><a href="fam/mockup-01/">Interactive mockup #1</a></li>
+            <li><a href="fam/mockup-02/">Interactive mockup #2</a></li>
         </ul>
 
         <h2>Github repos</h2>
