web/index.html: add link to sample set 2 Github repo

--- a/web/index.html
+++ b/web/index.html
@@ -55,6 +55,11 @@
                 </a>
             </li>
             <li>
+                <a href="https://github.com/NYULibraries/dlts-finding-aids-ead-sample-set-2">
+                    EAD sample set #2
+                </a>
+            </li>
+            <li>
                 <a href="https://github.com/NYULibraries/dlts-finding-aids-ead-go-packages">
                     Go packages for EAD
                 </a>
