web/index.html: link to Laura's main /ux/findingaids/ directory only

--- a/web/index.html
+++ b/web/index.html
@@ -25,13 +25,7 @@
         <h2>Finding Aids Site(s) (FAS)</h2>
 
         <ul>
-            <li><a href="/ux/findingaids/">UX (stage only, there is no dev instance)</a></li>
-            <ul>
-                <li><a href="http://stageweb1.dlib.nyu.edu/ux/findingaids/datamodel_v5/">Finding Aids Data Model 5</a></li>
-                <li><a href="https://stageweb1.dlib.nyu.edu/ux/findingaids/datamodel_v5-0-2_b/">Finding Aids Data Model 5.0.2, Akkasah Turkey Collection has new EADID</a></li>
-                <li><a href="/ux/findingaids/polyportraits/">Guide to the Poly Archives Portrait Collection, 1866-2007</a></li>
-                <li><a href="https://stageweb1.dlib.nyu.edu/ux/findingaids/sampleset2/">Finding Aids Sample Set 2/</a></li>
-            </ul>
+            <li><a href="/ux/findingaids/">Laura's UX directory for finding aids (stage only, there is no dev instance)</a></li>
         </ul>
 
         <h2>Finding Aids Manager (FAM)</h2>
