web/index.html: add link to JSON files for sample set #2

--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,12 @@
             </li>
             <li>
                 <a href="https://github.com/NYULibraries/dlts-finding-aids-json-generated-from-ead-sample-set-1">
-                    JSON files
+                    JSON files generated from EAD sample set #1
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/NYULibraries/dlts-finding-aids-json-generated-from-ead-sample-set-2">
+                    JSON files generated from EAD sample set #2
                 </a>
             </li>
             <li>
