web/index.html: add Jamboards

--- a/web/index.html
+++ b/web/index.html
@@ -59,6 +59,29 @@
                 </a>
             </li>
             <li>
+                <a href="https://jamboard.google.com/u/0/">
+                    Jamboards
+                </a>
+                <ul>
+                    <li>
+                        <a href="https://jamboard.google.com/d/1AhakjHH0Ktc_rk2tWt0ZIegD8Azx5HtbjjuDck_Rh5c/viewer">
+                            FADESIGN Arch (Don and Joe)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://jamboard.google.com/d/1-86mpOQvdqyUtQS2ZZxn3Rh259Iz3i4AShUicvzakSQ/viewer?f=0">
+                            FADESIGN sequencing 2021 (Weatherly)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://jamboard.google.com/d/1JmrLYAq_vHpmqpSZzJY421Btu4HCvQrH70uRcWzGFLU/viewer?f=0">
+                            DAOs
+                        </a>
+                    </li>
+                    
+                </ul>
+            </li>
+            <li>
                 <a href="https://github.com/NYULibraries/dlts-finding-aids-json-generated-from-ead-sample-set-1">
                     JSON files generated from EAD sample set #1
                 </a>
