web/index.html: add Jira ticket links

--- a/web/index.html
+++ b/web/index.html
@@ -78,7 +78,7 @@
                             DAOs
                         </a>
                     </li>
-                    
+
                 </ul>
             </li>
             <li>
@@ -94,6 +94,31 @@
             <li>
                 <a href="https://github.com/NYULibraries/dlts-finding-aids-zek-generated-code">
                     Zek files
+                </a>
+            </li>
+        </ul>
+
+        <h2>Jira tickets with reference documentation</h2>
+
+        <ul>
+            <li>
+                <a href="https://jira.nyu.edu/jira/browse/FADESIGN-20">
+                    &lt;eadid&gt; syntax rules
+                </a>
+            </li>
+            <li>
+                <a href="https://jira.nyu.edu/jira/browse/FADESIGN-290">
+                    &lt;eadid&gt; syntax rules regular expression
+                </a>
+            </li>
+            <li>
+                <a href="https://jira.nyu.edu/jira/browse/FADESIGN-63">
+                    FAM user list with email addresses
+                </a>
+            </li>
+            <li>
+                <a href="https://jira.nyu.edu/jira/browse/FADESIGN-65">
+                    Repository names and codes map
                 </a>
             </li>
         </ul>
