web/index.html: add link to https://jira.nyu.edu/jira/projects/FADESIGN/issues/FADESIGN-171

--- a/web/index.html
+++ b/web/index.html
@@ -121,6 +121,11 @@
                     Repository names and codes map
                 </a>
             </li>
+            <li>
+                <a href="https://jira.nyu.edu/jira/browse/FADESIGN-171">
+                    Elements whose role attributes contain relator codes that need to be validated
+                </a>
+            </li>
         </ul>
     </div>
 
