web/index.html BUGFIX: update URL for Laura's UX stuff

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
         <h2>Finding Aids Site(s) (FAS)</h2>
 
         <ul>
-            <li><a href="/ux/findingaids/">Laura's UX directory for finding aids (stage only, there is no dev instance)</a></li>
+            <li><a href="http://stageweb1.dlib.nyu.edu/ux/findingaids/">Laura's UX directory for finding aids (stage only, there is no dev instance)</a></li>
         </ul>
 
         <h2>Finding Aids Manager (FAM)</h2>
